<resources>
    <string name="app_name">内部通讯录</string>
    <string name="modify_pwd">修改密码</string>
    <string name="text_login">登录</string>
    <string name="text_phone_quick_login">手机号快捷登录</string>
    <string name="duty_call">值班电话：</string>
    <string name="fax">传真：</string>
    <string name="email">电子邮件：</string>
    <string name="person_count">共%d人</string>
    <string name="cancel">取消</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="income_statue">来电显示</string>
    <string name="income_permission_msg">来电显示功能需要使用\"悬浮窗\"和\"锁屏显示\"权限 \n请到\"应用设置-权限\"中授权后才能正常使用</string>
    <string name="income_permission_pos">暂不开启</string>
    <string name="income_permission_nag">现在开启</string>
    <string name="common_permission_msg">通讯录的正常使用的权限已被禁止\r\n\n
                                      请在 "-应用设置-权限-"中修改此项设置</string>
    <string name="common_permission_title">权限申请</string>
    <string name="common_permission_pos">取消</string>
    <string name="common_permission_nega">立即授权</string>
    <string name="text_yellow">黄页</string>
    <string name="mechanism">机构</string>
    <string name="company">单位</string>
    <string name="contacts">联系人</string>
    <string name="search">搜索</string>
    <string name="mine">我的</string>
    <string name="username">姓名</string>
    <string name="mobile_phone">电话：</string>
    <string name="tel">座机：</string>
    <string name="mail">邮箱：</string>
    <string name="job">职务：</string>
    <string name="mine_company">单位：</string>
    <string name="mine_mechanism">机构：</string>
    <string name="general_max_per_image">图片过大，超过200k上限。</string>
    <string name="version_check">版本更新</string>
</resources>
