<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.cmcc.internalcontact.utils.view.CommonToolBar
            android:id="@+id/toolbar_mine"
            style="@style/common_toolbar_normal"
            app:leftFirstIconIsShown="true"
            app:titleText="@string/mine" />

        <LinearLayout
            android:id="@+id/rl_head_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginRight="@dimen/dp_14"
            android:background="@drawable/bg_mine_head_pic"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_head_pic"
                android:layout_width="@dimen/dp_59"
                android:layout_height="@dimen/dp_59"
                android:layout_marginTop="@dimen/dp_13"
                android:layout_marginBottom="@dimen/dp_10"
                android:src="@mipmap/ic_edit_info_headimg" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_16"
                android:lineSpacingExtra="@dimen/dp_10"
                android:text="丁福浩"
                android:textColor="@color/color_ff333333"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_19">

            <TextView
                android:id="@+id/tv_mp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/mobile_phone"
                android:textColor="@color/color_747474"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tv_mobile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_mp"
                android:lineSpacingExtra="@dimen/dp_9"
                android:text="136-0394-9338\n159-0394-0569"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_13" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@color/color_ffeeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_21"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_19"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/tel"
                android:textColor="@color/color_747474"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tv_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_10"
                android:text="851-1166"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@color/color_ffeeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_21"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_19"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/mail"
                android:textColor="@color/color_747474"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_10"
                android:text="dhf@zq.com"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@color/color_ffeeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_21"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_19"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/mine_mechanism"
                android:textColor="@color/color_747474"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tv_mechanism"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_10"
                android:text="中共市委"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@color/color_ffeeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_21"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_19"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/mine_company"
                android:textColor="@color/color_747474"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_10"
                android:text="中共周口市委"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@color/color_ffeeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_21"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_19"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/job"
                android:textColor="@color/color_747474"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tv_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_10"
                android:text="副书记、市长"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_5"
            android:background="@color/color_eeeeee" />

        <TextView
            android:id="@+id/tv_version_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_15"
            android:text="@string/version_check"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_5"
            android:background="@color/color_eeeeee" />

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_9"
            android:src="@mipmap/ic_exit_btn" />
    </LinearLayout>
</ScrollView>